--- a/quote-generator/style.css
+++ b/quote-generator/style.css
@@ -17,7 +17,7 @@ body{
     /*se eliminan todos los padding y los margin que vienen por defecto y los reseteas a 0, de esta manera cuando estes editando tu css podrás poner el margin y el padding que quieras a los diferentes elementos sin que un anterior padding o margin le afecte o por ejemplo los que vienen por defecto en algunas cosas...*/
     background-color:white;    
     background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%2369d782' fill-opacity='0.6'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-    color:rgb(2, 68, 2)
+    color:rgb(2, 68, 2);
     font-family: Kanit, sans-serif;
     font-weight: 700;
     text-align: center;
@@ -26,7 +26,87 @@ body{
     align-items: center;
     justify-content: center;/*define cómo el navegador distribuye el espacio entre y alrededor de los items flex, a lo largo del eje principal de su contenedor.*/
 
+    }
 
+    .quote-container {
+        width:auto;
+        max-width: 900px;
+        padding: 20px 30px; /*padding para el top y bottom en ese orden*/
+        border-radius: 5px; /*las esquinitas de la caja*/
+        background-color: rgba(255,255,255,0.4); /* el último valor nos da opacidad*/
+        box-shadow: 0 10px 10px 10px rgba(0,0,0,0.2); /* la sombrita el último valor nos da opacidad*/
+    }
 
-}
+    .quote-text {
+        font-size: 2.75rem;
+    }
 
+    .long-quote {
+        font-size: 2rem;
+    }
+
+    .fa-quote-left {
+        font-size: 4rem; /*las comillas*/
+    }
+
+    .fa-quote-right {
+        font-size: 4rem;
+    }
+
+    .author {
+       
+        font-size: 2rem;
+        font-weight: 400;
+        font-style: italic;
+    }
+
+    .button-container{
+        margin-top: 15px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    button{
+        cursor: pointer; /*cambia el ratón cuando pasa x aqui*/
+        font-size: 1.2rem;
+        height: 2.5rem;
+        border: none;
+        border-radius: 10px;
+        color:white;
+        background: #333;
+        outline: none;
+        padding: 0.5rem 1.8rem;
+        box-shadow: 0 0.3rem rgba(121,121,121, 0.65)
+    }
+
+    button:hover{
+        filter:brightness(110%); /*efecto de cuando pasas el raton por el botón cambia de color*/
+    }
+
+    button:active{
+        transform: translate(0, 0.3rem);
+        box-shadow: 0 0.1rem rgba(255,255,255,0.65)
+    }
+
+    .twitter-button:hover {
+        color: #38a1f3;
+    }
+
+    .fa-twitter {
+        font-size: 1.5rem;
+    }
+    
+    /*definimos un margen para que siempre haya uno de nuestra cajita aunque se estreche la pantalla*/
+
+    /*Media Query: tablet or smaller */
+
+    @media screen and (max-width: 1000px) {
+        .quote-container{
+            margin: auto 10px;
+        }
+
+        .quote-text{
+            font-size: 2.5rem;
+        }
+
+    }
